--- a/index.html
+++ b/index.html
@@ -5,15 +5,38 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel= "stylesheet" href="styles.css">
 </head>
 
 <header>
     <img src="">
     /*rotating images*/
-    <h1>The Garden at the Rastetter est. circa 1840s ish</h1>
+    <h1 class = 'title'>The Garden at the Rastetter est. circa 1840s ish</h1>
     <p>Coming Soon...The Garden!</p>
     <p>Public Garden Tours: Tours will resume after the Vampire Infestation has been absolved.</p>
     <p>Sunday through Saturday: Closed because it's a private residence.</p>
+<div>
+ <nav class= 'main-nav'> 
+     <ul class= 'nav-list'>
+      <li class= 'nav-item'>
+        <a href= "#" class="nav-link">Link to Main Nav</a>
+         <ul class= 'dropdown-menu'>
+          <li class= 'dropdown-item'>
+            <a href= "#" class= "dropdown-link">History</a>
+             <p>History</p>
+          <li class= 'dropdown-item'>
+            <a href= "#" class= "dropdown-link">Plants</a>
+             <p>Plants</p>
+          <li class= 'dropdown-item'>
+            <a href= "#" class= "dropdown-link">Location</a>
+            <p>Location</p>
+          <li class= 'dropdown-item'>
+            <a href= "#" class= "dropdown-link">Contact</a>
+            <p>Contact</p>
+       <div class= "dropdown-bg"></div>
+        </nav>
+        </div>
+
 </header>
 
 
@@ -22,39 +45,38 @@
     <p>It's old.</p>
 
     <h3>Plant Glossary</h3>
+        <h3 class= 'plant-menu'>
     <p></p>
     <ul>
         <li>
-            Plant
-            <img src="">
+            Pitcher Plants
+            <img class="pitcher-photo" src="pitcher-plant-849453_1920.jpg">
         </li>
 
         <li>
-            Plant
-            <img src="">
+            Passion Flower
+            <img class= "passion-photo" src="passion-flower-3322889_1920.jpg">
         </li>
 
         <li>
-            Plant 
-            <img src="">
+            Roses
+            <img class= "rose-photo" src="rose-168457_1920.jpg">
         </li>
     </ul>
-
-    /*order alphabetically and by season*/
 
     <h4>Location</h4>
     <p>Louisville, Kentucky of Earth</p>
     <p>If you are interested in renting the Rastetter for a private event, an appointment for touring the property is
         required with a $2,000.00 bribe.</p>
     <p>Please fill out this form to schedule your tour</p>
-    /*add link to form*/
+    <link rel= "form" href="form.html">
 
     <h5>Contact</h5>
     <p>Phone: Please never call unless you're bringing food.</p>
 
     <h6>Email</h6>
     <p>this_house_stole_my_soul@gmail.com</p>
-    /*add email Link*/
+    <a href = "this_house_stole_my_soul@gmail.com">Send Email</a>
 
     <h7>Admission</h7>
     <p>General Admission is Forbidden!!! Free for virgins.</p>
@@ -63,4 +85,5 @@
 <footer></footer>
 /*Social Media Links*/
 
+<link rel= "index.js" href="index.js">
 </html>
