--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <link rel= "stylesheet" href="styles.css">
 </head>
-
+<body>
 <header>
     <img src="">
     /*rotating images*/
@@ -40,7 +40,7 @@
 </header>
 
 
-<body>
+<div>
     <h2>History</h2>
     <p>It's old.</p>
 
@@ -69,7 +69,9 @@
     <p>If you are interested in renting the Rastetter for a private event, an appointment for touring the property is
         required with a $2,000.00 bribe.</p>
     <p>Please fill out this form to schedule your tour</p>
-    <link rel= "form" href="form.html">
+    <link rel= "form" href="form.html"></link>
+
+    <a href= "form.html">Click Here For Form</a>
 
     <h5>Contact</h5>
     <p>Phone: Please never call unless you're bringing food.</p>
@@ -80,10 +82,11 @@
 
     <h7>Admission</h7>
     <p>General Admission is Forbidden!!! Free for virgins.</p>
-</body>
+    </div>
 
 <footer></footer>
 /*Social Media Links*/
+</body>
 
-<link rel= "index.js" href="index.js">
+<script src= "index.js" href="index.js"></ScriptProcessorNode>
 </html>
