--- a/form.html
+++ b/form.html
@@ -5,23 +5,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel= "formstyles" href="formstyles.css">
+    <link rel= "stylesheet" href="formstyles.css">
 </head>
 
 <body>
 
 <div class="form">
-    <div class= "fullname">
+    <form action="https://this_house_stole_my_soul@gmail.com_"></form>
+<div class= "fullname">
     <label for= "fullname">Name:</label>
-    <input type= "text" id="fullname" name= "fullname"></div>
+    <input type= "text" id="fullname" name= "fullname">
+</div>
 
-    <div class= "pnumber">
+<div class= "pnumber">
     <label for= "pnumber">Phone Number:</label>
-    <input type="text" id="pnumber" name="pnumber" ></div>
+    <input type="text" id="pnumber" name="pnumber" >
+</div>
 
-    <div class= "email">
+<div class= "email">
     <label for= "email">Email:</label>
-    <input type="email" id= "email" name="email"></div>
+    <input type="email" id= "email" name="email">
+</div>
 
     <div class= "description">
     <label for= "description">Please give us a short description of why you would make a delicous dinner for vampires.</label>
