--- a/index.html
+++ b/index.html
@@ -10,16 +10,17 @@
 <body>
 <header>
     <img src="">
-    /*rotating images*/
+    <!--rotating images-->
     <h1 class = 'title'>The Garden at the Rastetter est. circa 1840s ish</h1>
     <p>Coming Soon...The Garden!</p>
     <p>Public Garden Tours: Tours will resume after the Vampire Infestation has been absolved.</p>
     <p>Sunday through Saturday: Closed because it's a private residence.</p>
 <div>
- <nav class= 'main-nav'> 
+ <nav class= 'top-nav'> 
+     <div id="myLinks"></div>
      <ul class= 'nav-list'>
       <li class= 'nav-item'>
-        <a href= "#" class="nav-link">Link to Main Nav</a>
+        <a href= "#" class="topnav a">Link to Main Nav</a>
          <ul class= 'dropdown-menu'>
           <li class= 'dropdown-item'>
             <a href= "#" class= "dropdown-link">History</a>
@@ -35,10 +36,16 @@
             <p>Contact</p>
        <div class= "dropdown-bg"></div>
         </nav>
-        </div>
+    
+        <!--Hamburger Menu & Bar Icon-->
+    <a href="javascript:void(0);" class="icon"
+    onclick="myFunction"()>
+        <i class=".hamburger-menu"></i>>
+    </a>
+</div>
+
 
 </header>
-
 
 <div>
     <h2>History</h2>
