--- a/index.html
+++ b/index.html
@@ -9,14 +9,24 @@
 </head>
 <body>
 <header>
-    <img src="">
-    <!--rotating images-->
+     <!--Hamburger Menu & Bar Icon-->
+     <a href="javascript:void(0);" class="icon"
+     onclick="myFunction"()>
+         <i class=".hamburger-menu"></i>>
+     </a>
+
+    <div class= "carosel">
+        <!--rotating images-->
+    <img src="flowers-4284677_1920.jpg">
+    <img src="flower-meadow-3598555_1920.jpg">
+    <img src="the-squirrel-4142446_1920.jpg">
+    </div>
     <h1 class = 'title'>The Garden at the Rastetter est. circa 1840s ish</h1>
     <p>Coming Soon...The Garden!</p>
     <p>Public Garden Tours: Tours will resume after the Vampire Infestation has been absolved.</p>
     <p>Sunday through Saturday: Closed because it's a private residence.</p>
 <div>
- <nav class= 'top-nav'> 
+ <nav class= 'topnav'> 
      <div id="myLinks"></div>
      <ul class= 'nav-list'>
       <li class= 'nav-item'>
@@ -36,12 +46,6 @@
             <p>Contact</p>
        <div class= "dropdown-bg"></div>
         </nav>
-    
-        <!--Hamburger Menu & Bar Icon-->
-    <a href="javascript:void(0);" class="icon"
-    onclick="myFunction"()>
-        <i class=".hamburger-menu"></i>>
-    </a>
 </div>
 
 
@@ -96,4 +100,4 @@
 </body>
 
 <script src= "index.js" href="index.js"></ScriptProcessorNode>
-</html>
+</html
