Screaming at Computer

--- a/index.html
+++ b/index.html
@@ -25,30 +25,34 @@
     <div class= "carosel">
         <div class="carousel">
     
-            <button class="carousel_button  carousel_button--left is-hidden">
-                <img src="png-arrow-left.png"></img> alt="prev">
-            </button>
-                <div class="carousel_track-container">
-                    <ul class="carousel_track">
-                        <li class="carousel_slide current-slide">
-                            <img class="carousel-image" src="flowers-4284677_1920.jpg" alt="Close up of Flowers"> 
-                        <li class="carousel_slide">
-                            <img class="carousel-image" src="flower-meadow-3598555_1920.jpg" alt="Meadow of Flowers">   
-                        </li>
-                        <li class="carousel_slide">
-                            <img class="carousel-image" src="the-squirrel-4142446_1920.jpg" alt="Squirrel Resting on Tree Branch">
-                        </li>
-                    </ul> 
-                </div>
+        <button class="carousel_button  carousel_button--left is-hidden">
+            <img src="png-arrow-left.png"></img> alt="prev">
+        </button>
+    <div class="carousel_track-container">
+        <ul class="carousel_track">
+            <li class="carousel_slide current-slide">
+                <img class="carousel-image" src="flowers-4284677_1920.jpg" alt="Wisteria Hanging Over Walkway"> 
+            <li class="carousel_slide">
+                <img class="carousel-image" src="flower-meadow-3598555_1920.jpg" alt="Meadow of Flowers">   
+            </li>
+            <li class="carousel_slide">
+                <img class="carousel-image" src="the-squirrel-4142446_1920.jpg" alt="Squirrel Resting on Tree Branch">
+            </li>
+            <li class="carousel_slide">
+                <img class="carousel-image" src="greenhouse-691704_1920.jpg" alt="Greenhouse">
+            </li>
+        </ul> 
+    </div>
             <button class="carousel_button carousel_button--right">
                 <img src="png-arrow-right.png" alt="next">
             </button>
-            <div class="carousel_nav">
-                <button class="carousel_indicator current-slide"></button>
-                <button class="carousel_indicator"></button>
-                <button class="carousel_indicator"></button>
-            </div>
+    <div class="carousel_nav">
+            <button class="carousel_indicator current-slide"></button>
+            <button class="carousel_indicator"></button>
+            <button class="carousel_indicator"></button>
+            <button class="carousel_indicator"></button>
         </div>
+    </div>
 
 
     <p>Coming Soon...The Garden!</p>
