--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="carousel">
     
         <button class="carousel_button  carousel_button--left is-hidden">
-            <img src="png-arrow-left.png"></img> alt="prev">
+            <img src="2cd43b_87b90477cd2b4f9d83b826af411c4978_mv2_d_2400_2007_s_2.png"></img> alt="prev">
         </button>
     <div class="carousel_track-container">
         <ul class="carousel_track">
@@ -38,17 +38,13 @@
             <li class="carousel_slide">
                 <img class="carousel-image" src="the-squirrel-4142446_1920.jpg" alt="Squirrel Resting on Tree Branch">
             </li>
-            <li class="carousel_slide">
-                <img class="carousel-image" src="greenhouse-691704_1920.jpg" alt="Greenhouse">
-            </li>
         </ul> 
     </div>
             <button class="carousel_button carousel_button--right">
-                <img src="png-arrow-right.png" alt="next">
+                <img src="2cd43b_8b6ebce526eb48efad256d5fd2606911_mv2_d_2400_2007_s_2.png" alt="next">
             </button>
     <div class="carousel_nav">
             <button class="carousel_indicator current-slide"></button>
-            <button class="carousel_indicator"></button>
             <button class="carousel_indicator"></button>
             <button class="carousel_indicator"></button>
         </div>
@@ -130,5 +126,5 @@
 <!--Social Media Icons-->>
 </body>
 
-<script src= "index.js" href="index.js"></ScriptProcessorNode>
+<script src= "index.js" href="index.js"></script>
 </html
