Working Animation and Nth Type

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="carousel">
     
         <button class="carousel_button  carousel_button--left is-hidden">
-            <img src="2cd43b_87b90477cd2b4f9d83b826af411c4978_mv2_d_2400_2007_s_2.png"></img> alt="prev">
+            <img src="back.png"></img> alt="prev">
         </button>
     <div class="carousel_track-container">
         <ul class="carousel_track">
@@ -41,7 +41,7 @@
         </ul> 
     </div>
             <button class="carousel_button carousel_button--right">
-                <img src="2cd43b_8b6ebce526eb48efad256d5fd2606911_mv2_d_2400_2007_s_2.png" alt="next">
+                <img src="arrow.png" alt="next">
             </button>
     <div class="carousel_nav">
             <button class="carousel_indicator current-slide"></button>
