--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
 </header>
 
     <!--Carousel -->
-    <div class= "carosel">
+    <div class= "carousel">
         <div class="carousel">
     
         <button class="carousel_button  carousel_button--left is-hidden">
-            <img src="back.png"></img> alt="prev">
+            <img src="back copy.png"></img> alt="prev">
         </button>
     <div class="carousel_track-container">
         <ul class="carousel_track">
