--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel= "stylesheet" href="styles.css">
+    <link rel= "stylesheet" href="normalize.css">
 </head>
 
 <body>
@@ -16,47 +17,32 @@
     </div>
 
     <!--Hamburger Menu & Bar Icon-->
-    <div class="hamburger-menu">
-        <div class="navbar">
-            
-            <!-- Navigation links (hidden by default) -->
-            <div id="myLinks">
-            <a href="#history">History</a>
-            <a href="#plants">Plants</a>
-            <a href="#location">Location</a>
-            <a href="#contact">Contact</a>
-            </div>
-            <!-- "Hamburger menu" / "Bar icon" to toggle the navigation links -->
-            <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-            <i class="fa fa-bars" aria-hidden="true"></i>
-            </a>
+    <nav class="navbar">
+        <div class="hamburger-menu">
+            <div class="line line-1"></div>
+            <div class="line line-2"></div>
+            <div class="line line-3"></div>
         </div>
-        <script src= "index.js" href="index.js"></script>
-        media query for dropdown menu
-            <nav class= 'navbar'> 
-                <div id="myLinks"></div>
-                <ul class= 'nav-list'>
-                <li class= 'nav-item'>
-                    <a href= "#" class="navbar a">Link to Main Nav</a>
-                    <ul class= 'dropdown-menu'>
-                    <li class= 'dropdown-item'>
-                        <a href= "#" class= "dropdown-link">History</a>
-                        <p>History</p>
-                    <li class= 'dropdown-item'>
-                        <a href= "#" class= "dropdown-link">Plants</a>
-                        <p>Plants</p>
-                    <li class= 'dropdown-item'>
-                        <a href= "#" class= "dropdown-link">Location</a>
-                        <p>Location</p>
-                    <li class= 'dropdown-item'>
-                        <a href= "#" class= "dropdown-link">Contact</a>
-                        <p>Contact</p>
-            <div class= "dropdown-bg"></div>
-                    </nav>
+
+        <ul class="nav-list">
+            <li class="nav-item">
+                <a href="#history" class="nav-link">History</a>
+            </li>
+            <li class="nav-item"> 
+                <a href="#plant-menu" class="nav-link">Plants</a>
+            </li>
+            <li class="nav-item">
+                <a href="#location" class=nav-link>Location</a>
+            </li>
+            <li class="nav-item">
+                <a href="#contact" class="nav-link">Contact</a>
+            </li>
+        </ul>
+    </nav>
     </div>
 </header>
 
-    <!--Carousel -->
+    <!--Carousel-->
     <div class= "carousel">
         <div class="carousel">
     
@@ -91,13 +77,12 @@
     <p>Sunday through Saturday: Closed because it's a private residence.</p>
 
 <div>
+    <a id="history"></a>
     <h2>History</h2>
     <p>It's old.</p>
 
-    <h3>Plant Glossary</h3>
-        <h3 class= 'plant-menu'>
-    <p>Our plants love math. We included a number generator for their benfit.</p>
-    <ul>
+    <a id= "plants-menu"></a>
+    <h3>Plant Glossary </h3>
         <li>
             Pitcher Plants
             <img class="pitcher-photo" src="pitcher-plant-849453_1920.jpg">
@@ -113,7 +98,9 @@
             <img class= "rose-photo" src="rose-168457_1920.jpg">
         </li>
     </ul>
+</div>
 
+    <a id= "location"></a>
     <h4>Location</h4>
     <p>Louisville, Kentucky of Earth</p>
     <p>If you are interested in renting the Rastetter for a private event, an appointment for touring the property is
@@ -123,6 +110,7 @@
 
     <a href= "form.html">Click Here For Form</a>
 
+    <a id= "contact"></a>
     <h5>Contact</h5>
     <p>Phone: Please never call unless you're bringing food.</p>
 
@@ -133,12 +121,11 @@
     <br>
     <h7>Admission</h7>
     <p>General Admission is Forbidden!!! Free for virgins.</p>
-    </div>
+
 
 <footer></footer>
 <!--Social Media Icons-->>
 </body>
 
 <script src= "index.js" href="index.js"></script>
-   
 </html
