--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <h1 class = 'title'>The Garden at the Rastetter est. circa 1840s ish</h1>
     </div>
 
+
     <!--Hamburger Menu & Bar Icon-->
     <nav class="navbar">
         <div class="hamburger-menu">
@@ -29,7 +30,7 @@
                 <a href="#history" class="nav-link">History</a>
             </li>
             <li class="nav-item"> 
-                <a href="#plant-menu" class="nav-link">Plants</a>
+                <a href="#plants-menu" class="nav-link">Plants</a>
             </li>
             <li class="nav-item">
                 <a href="#location" class=nav-link>Location</a>
@@ -71,37 +72,49 @@
         </div>
     </div>
 
-
+    <div class= "soon">
     <p>Coming Soon...The Garden!</p>
+    </div>
     <p>Public Garden Tours: Tours will resume after the Vampire Infestation has been absolved.</p>
     <p>Sunday through Saturday: Closed because it's a private residence.</p>
-
 <div>
+
+        <img class= "vampire" src="dracula-1226357_640.png">
+
+    <div class= "history">
     <a id="history"></a>
     <h2>History</h2>
     <p>It's old.</p>
+    </div>
 
     <a id= "plants-menu"></a>
+    <div class= plants-menu>
     <h3>Plant Glossary </h3>
         <li>
             Pitcher Plants
             <img class="pitcher-photo" src="pitcher-plant-849453_1920.jpg">
+            <div class= "pit-descrpit">Pitcher plants prefer damp soil and a carnivourous diet.</div>
         </li>
 
         <li>
             Passion Flower
             <img class= "passion-photo" src="passion-flower-3322889_1920.jpg">
+            <div class= "pass-descript">Passion Flower is a hardy vine with intoxicating aroma. It can also be used as a relaxation tea.</div>
         </li>
 
         <li>
-            Roses
+            Roses, Assorted
             <img class= "rose-photo" src="rose-168457_1920.jpg">
+            <div class= "rose-descript">Roses are classic example of zen gardening. Rushing with these plants ends in thorns.</div>
         </li>
+    </div>
     </ul>
 </div>
 
     <a id= "location"></a>
+    <div class= "location">
     <h4>Location</h4>
+    </div>
     <p>Louisville, Kentucky of Earth</p>
     <p>If you are interested in renting the Rastetter for a private event, an appointment for touring the property is
         required with a $2,000.00 bribe.</p>
@@ -111,7 +124,9 @@
     <a href= "form.html">Click Here For Form</a>
 
     <a id= "contact"></a>
+    <div class= "contact">
     <h5>Contact</h5>
+    </div>
     <p>Phone: Please never call unless you're bringing food.</p>
 
     <h6>Email</h6>
@@ -124,7 +139,7 @@
 
 
 <footer></footer>
-<!--Social Media Icons-->>
+<!--Social Media Icons-->
 </body>
 
 <script src= "index.js" href="index.js"></script>
