--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
     <link rel= "stylesheet" href="styles.css">
     <link rel= "stylesheet" href="normalize.css">
+
 </head>
 
 <body>
@@ -48,22 +49,22 @@
         <div class="carousel">
     
         <button class="carousel_button  carousel_button--left is-hidden">
-            <img src="back.png" alt="back button">
+            <img src="Images/back.png" alt="back button">
         </button>
     <div class="carousel_track-container">
         <ul class="carousel_track">
             <li class="carousel_slide current-slide">
-                <img class="carousel-image" src="flowers-4284677_1920.jpg" alt="Wisteria Hanging Over Walkway"> 
+                <img class="carousel-image" src="Images/flowers-4284677_1920.jpg" alt="Wisteria Hanging Over Walkway"> 
             <li class="carousel_slide">
-                <img class="carousel-image" src="flower-meadow-3598555_1920.jpg" alt="Meadow of Flowers">   
+                <img class="carousel-image" src="Images/rose-168457_1920.jpg" alt="Meadow of Flowers">   
             </li>
             <li class="carousel_slide">
-                <img class="carousel-image" src="the-squirrel-4142446_1920.jpg" alt="Squirrel Resting on Tree Branch">
+                <img class="carousel-image" src="Images/the-squirrel-4142446_1920.jpg" alt="Squirrel Resting on Tree Branch">
             </li>
         </ul> 
     </div>
             <button class="carousel_button carousel_button--right">
-                <img src="arrow.png" alt="next">
+                <img src="Images/arrow.png" alt="next">
             </button>
     <div class="carousel_nav">
             <button class="carousel_indicator current-slide"></button>
@@ -79,7 +80,7 @@
     <p>Sunday through Saturday: Closed because it's a private residence.</p>
 <div>
 
-        <img class= "vampire" src="dracula-1226357_640.png">
+        <img class= "vampire" src="Images/dracula-1226357_640.png">
 
     <div class= "history">
     <a id="history"></a>
@@ -92,19 +93,19 @@
     <h3>Plant Glossary </h3>
         <li>
             Pitcher Plants
-            <img class="pitcher-photo" src="pitcher-plant-849453_1920.jpg">
+            <img class="pitcher-photo" src="Images/pitcher-plant-849453_1920.jpg">
             <div class= "pit-descrpit">Pitcher plants prefer damp soil and a carnivourous diet.</div>
         </li>
 
         <li>
             Passion Flower
-            <img class= "passion-photo" src="passion-flower-3322889_1920.jpg">
+            <img class= "passion-photo" src="Images/passion-flower-3322889_1920.jpg">
             <div class= "pass-descript">Passion Flower is a hardy vine with intoxicating aroma. It can also be used as a relaxation tea.</div>
         </li>
 
         <li>
             Roses, Assorted
-            <img class= "rose-photo" src="rose-168457_1920.jpg">
+            <img class= "rose-photo" src="Images/rose-168457_1920.jpg">
             <div class= "rose-descript">Roses are classic example of zen gardening. Rushing with these plants ends in thorns.</div>
         </li>
     </div>
